--- a/page1.html
+++ b/page1.html
@@ -86,17 +86,17 @@
                         <a class="nav-link link mbr-black text-white display-4" href="#top">
                             Quiénes somos</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Servicios</a>
+                    <li class="nav-item dropdown open">
+                        <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">Servicios</a>
                         <div class="dropdown-menu">
                             <a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader16-g">Análisis de Web Site</a>
                             <a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader24-h" aria-expanded="false">Diseño Web</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader16-i" aria-expanded="false">Diseño Landing Page</a>
-                            <div class="dropdown"><div class="dropdown"><a class="mbr-black dropdown-item text-white dropdown-toggle display-4" href="page1.html#extHeader10-j" aria-expanded="false" data-toggle="dropdown-submenu">Campañas Digitales</a><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-k" aria-expanded="false">Google Ads</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-k" aria-expanded="false">Adwords</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div>
+                            <div class="dropdown"><div class="dropdown open"><a class="mbr-black dropdown-item text-white dropdown-toggle display-4" href="page1.html#extHeader10-j" aria-expanded="true" data-toggle="dropdown-submenu">Campañas Digitales</a><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Google Ads</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Facebook Ads</a></div></div><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-k" aria-expanded="false">Adwords</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div>
                         </div>
                     </li>
 
-                    <li class="nav-item dropdown open">
-                        <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">Asesorías</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="false">Asesorías</a>
                         <div class="dropdown-menu">
                             <a class="mbr-black dropdown-item text-white display-4" href="#top">Gestión Comercial</a>
                             <a class="mbr-black dropdown-item text-white display-4" href="#top" aria-expanded="false">Coaching de equipos</a>
@@ -280,7 +280,7 @@
             <div class="icon-block-top pb-4">
                 <span class="mbr-iconfont socicon-google socicon display-2"></span>
             </div>
-            <h4 class="box-item-title pb-3 mbr-fonts-style mbr-black display-5">Campañas de Ads</h4>
+            <h4 class="box-item-title pb-3 mbr-fonts-style mbr-black display-5">Google Ads</h4>
             <p class="box-item-text mbr-fonts-style display-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, cupiditate delectus doloremque ea enim eveniet id magni necessitatibus odio.</p>
             <div class="mbr-section-btn"><a class="btn-underline mr-3 text-info display-4" href="https://mobirise.com">Leer más</a></div>
         </div>
@@ -288,7 +288,7 @@
             <div class="icon-block-top pb-4">
                 <span class="mbr-iconfont socicon-facebook socicon display-2"></span>
             </div>
-            <h4 class="box-item-title pb-3 mbr-fonts-style mbr-black display-5">Campañas Facebook Ads</h4>
+            <h4 class="box-item-title pb-3 mbr-fonts-style mbr-black display-5">Facebook Ads</h4>
             <p class="box-item-text mbr-fonts-style display-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur, cupiditate delectus doloremque ea enim eveniet id magni necessitatibus odio.</p>
             <div class="mbr-section-btn"><a class="btn-underline mr-3 text-info display-4" href="https://mobirise.com">Leer más</a></div>
 
@@ -304,7 +304,7 @@
         <div class="row">
             <div class="col-lg-12 img-col">
                 <img src="assets/images/03.jpg" alt="Mobirise">
-                
+                <div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-black display-4" href="page1.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>NUESTRO SERVICIO</a></div>
             </div>
             <div class="col-lg-5 title-col align-left">
                 <div class="title-wrap">
@@ -335,7 +335,7 @@
         <div class="row">
             <div class="col-lg-12 img-col">
                 <img src="assets/images/03.jpg" alt="Mobirise">
-                
+                <div class="mbr-section-btn pt-3"><a class="btn btn-lg btn-black display-4" href="page1.html"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>NUESTRO SERVICIO</a></div>
             </div>
             <div class="col-lg-5 title-col align-left">
                 <div class="title-wrap">
