create github pages

--- a/page1.html
+++ b/page1.html
@@ -83,15 +83,15 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown js-float-line nav-right" data-app-modern-menu="true"><li class="nav-item">
-                        <a class="nav-link link mbr-black text-white display-4" href="#top">
+                        <a class="nav-link link mbr-black text-white display-4" href="index.html#extHeader29-2">
                             Quiénes somos</a>
                     </li>
-                    <li class="nav-item dropdown open">
+                    <li class="nav-item dropdown">
                         <a class="nav-link link mbr-black dropdown-toggle text-white display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">Servicios</a>
                         <div class="dropdown-menu">
                             <a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader16-g">Análisis de Web Site</a>
                             <a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader24-h" aria-expanded="false">Diseño Web</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader16-i" aria-expanded="false">Diseño Landing Page</a>
-                            <div class="dropdown"><div class="dropdown open"><a class="mbr-black dropdown-item text-white dropdown-toggle display-4" href="page1.html#extHeader10-j" aria-expanded="true" data-toggle="dropdown-submenu">Campañas Digitales</a><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Google Ads</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Facebook Ads</a></div></div><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-k" aria-expanded="false">Adwords</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div>
+                            <div class="dropdown"><div class="dropdown"><a class="mbr-black dropdown-item text-white dropdown-toggle display-4" href="page1.html#extHeader10-j" aria-expanded="false" data-toggle="dropdown-submenu">Campañas Digitales</a><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Google Ads</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extHeader10-j" aria-expanded="false">Facebook Ads</a></div></div><div class="dropdown-menu dropdown-submenu"><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-k" aria-expanded="false">Adwords</a><a class="mbr-black dropdown-item text-white display-4" href="page1.html#extContent6-l" aria-expanded="false">Facebook Ads</a></div></div>
                         </div>
                     </li>
 
@@ -213,7 +213,7 @@
                     <h3 class="mbr-section-subtitle align-center mbr-light mbr-fonts-style display-5">
                         Website themes provided by Mobirise are based on two most popular frameworks: AMP and Bootstrap. They allow to create mobile-friendly, responsive, and fast websites.
                     </h3>
-                    
+                    <div class="mbr-section-btn align-center pt-3"><a class="btn btn-black btn-md display-4" href="#top">VER CATÁLOGO</a></div>
                 </div>
             </div>
         </div>
