create github pages

--- a/page1.html
+++ b/page1.html
@@ -34,7 +34,7 @@
     <nav class="navbar navbar-dropdown navbar-expand-lg">
         <div class="navbar-brand">
             <span class="navbar-logo">
-                <a href="https://mobirise.com">
+                <a href="#top">
                     <img src="assets/images/logo-tree-media-192x72.png" alt="Mobirise" title="" style="height: 5.6rem;">
                 </a>
             </span>
@@ -65,7 +65,7 @@
                 
                 <li class="nav-item"><a class="nav-link link text-primary display-4" href="https://mobirise.com" aria-expanded="false">Contacto</a></li></ul>
             
-            <div class="navbar-buttons px-2 mbr-section-btn"><a class="btn btn-sm btn-warning display-4" href="https://wa.me/+51  999 061 367">WhatsApp</a></div>
+            <div class="navbar-buttons px-2 mbr-section-btn"><a class="btn btn-sm btn-warning display-4" href="http://wa.link/rpsrf4" target="_blank">WhatsApp</a></div>
         </div>
     </nav>
 </section>
